2005-08-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-ps.scm (munge-lily-font-name): Bugfix: Munge only
	plain emmentaler/aybabtu.  Backportme.

	* lily/tuplet-bracket.cc (calc_position_and_height): Bugfix:
	missing dir correction.

2005-08-05  Graham Percival  <gperlist@shaw.ca>

	* scm/define-markup-commands: fix reversed justify/wordwrap
	doc strings.

2005-08-05  Jürgen Reuter  <reuter@ipd.uka.de>

	* lily/ligature-engaver.cc, lily/coherent-ligature-engaver.cc,
	lily/gregorian-ligature-engaver.cc,
	lily/include/ligature-engraver.hh,
	lily/include/coherent-ligature-engraver.hh,
	lily/include/gregorian-ligature-engraver.hh: make these classes
	truely abstract.  This should fix some internal oddities such as
	duplicate as well as dead translator/property declarations, and
	also some dead code.

	* lily/ligature-bracket-engraver.cc, lily/ligature-engraver.cc:
	bugfix: avoid message "junking empty ligature" on ligature
	brackets by collecting dummy grobs.

2005-08-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tuplet-bracket.cc (print): default right overshoot to 0.0

	* input/proportional.ly (staffKind): bugfix.
	(staffKind): updates by Trevor Baca.

	* scm/define-grobs.scm (all-grob-descriptions): remove arrows as
	default layout. 

	* lily/tuplet-bracket.cc (print): check whether edge-text is a
	pair.

	* lily/beam.cc (rest_collision_callback): call position_beam() if
	necessary.

	* VERSION: release 2.7.4

	* input/regression/spacing-uniform-stretching.ly: new file.

	* lily/spacing-loose-columns.cc (set_loose_columns): use robust_relative_extent().

	* Documentation/topdocs/NEWS.tely (Top): add Nicolas as
	contributor.

	* lily/include/ly-module.hh: define MODULE_GC_KLUDGE globally.

	* input/proportional.ly: new file.

	* lily/tuplet-bracket.cc (after_line_breaking): don't suicide if
	columns is empty

	* lily/tuplet-engraver.cc (finalize): new function. Reset right
	bounds to currentCommandColumn for the last step.